--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "knex-populate-plugin",
   "version": "0.0.1",
   "description": "A nice knex plugin to help you populating a query result with data from other tables",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/rychell/knex-populate-plugin.git",
   "author": "Rychell Sousa",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.20"
   },
